# scriber

./: .gitignore  CONTRIBUTING.md  PLAN.md  README.md  pyproject.toml  scriber-cli-mac.spec  scriber-mac.spec  scriber-win.spec
.github/workflows/: release.yml
Formula/: scriber.rb
docs/: PLAN.md
packaging/assets/: icon.icns
packaging/pyinstaller/: scriber-cli-mac.spec  scriber-mac.spec  scriber-win.spec
scriber/: __main__.py  app.py  cli.py
scriber/core/: audio.py  batch.py  diarize.py  download.py  export.py  merge.py  model_cache.py  transcribe.py  translate.py
scriber/gui/: icon.py  main_window.py  widgets.py  worker.py  worker_runtime.py
scriber/gui/assets/: __init__.py
scripts/: install.ps1
tests/: test_core_fixes.py
